# SimpleGrid

./: .gitignore  CMakeLists.txt  README.md  camera.c  camera.h  cube.c  cube.h  debug_grid.c  debug_grid.h  main.c  shader.c  shader.h  transform.c  transform.h
assets/: default.frag  default.vert
assets/debug/: grid.frag  grid.vert
